deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: htmlapp
  template:
    metadata:
      labels:
        app: htmlapp
    spec:
      containers:
      - name: html-container
        image: my-html-app
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
