service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service
spec:
  type: NodePort
  selector:
    app: htmlapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30009
